--- a/index.html
+++ b/index.html
@@ -1,23 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="it">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://kit.fontawesome.com/e8055db231.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/e8055db231.js" crossorigin="anonymous"></script> <!--Icone Fontawesome: fontawesome.com-->
     <link rel="icon" type="image/svg" href="favicon.svg">
 
 </head>
 
 <body>
+
+    <!--Navigation bar-->
+    <!--Quando l'utente passa il mouse sulla barra, la seguente aumenta in larghezza da 5rem a 15rem
+    Allo steso tempo avengono altri eventi-->
     <nav class="navbar">
         <ul class="navbar-nav">
+
+            <!--Logo animato-->
             <li class="logo">
                 <a href="#" class="nav-icon">
                     <span class="icon-text">Esempi CSS</span>
+                    <!--L'icona usata per la navigation bar é bicolore, ció vuole dire che si puossono scegliere due colori diversi:
+                    Uno per la prima parte del icona "fa-primary" e una per la seconda "fa-secondary"
+                    Tutto ció viene animato quando si passa il mouse sopra la navigation bar, routando l'icona di 180 gradi con una 
+                    transizione, e cambiando colore del icona(questo accade in tutte le icone)-->
                     <svg aria-hidden="true" focusable="false" data-prefix="fad" data-icon="angle-double-right"
                         role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"
                         class="svg-inline--fa fa-angle-double-right fa-w-14 fa-5x">
@@ -32,11 +41,16 @@
                     </svg>
                 </a>
             </li>
+
+            <!--Link per altre pagine-->
+            <!--Ognuno di questi contiene un icona e un testo nascosto, quando l'utente passa il mouse sopra la navigation bar il testo riappare-->
             <li class="nav-item">
                 <span class="nav-icon">
                     <i class="fa-solid fa-file-code"></i>
                     <span class="icon-text">CSS interno</span>
                 </span>
+                <!--Questo é il testo appartenente al dropdown-menu, ogni singola icona ne ha uno e di base il testo non viene mostrato.
+                Quando l'utente passa il mouse sopra un icona o sul testo affianco, il dropdown menu appare, con un animazione-->
                 <div class="nav-link">
                     <a href="page1.html">Borders</a>
                     <a href="page4.html">Float</a>
@@ -66,8 +80,6 @@
                 </div>
             </li>
         </ul>
-
-
     </nav>
 
     <main>   
