--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="it">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://kit.fontawesome.com/e8055db231.js" crossorigin="anonymous"></script> <!--Icone Fontawesome: fontawesome.com-->
+    <script src="https://kit.fontawesome.com/e8055db231.js" crossorigin="anonymous"></script>
+    <!--Icone Fontawesome: fontawesome.com-->
     <link rel="icon" type="image/svg" href="favicon.svg">
 
 </head>
@@ -22,7 +24,7 @@
             <!--Logo animato-->
             <li class="logo">
                 <a href="#" class="nav-icon">
-                    <span class="icon-text">Esempi CSS</span>
+                    <span class="icon-text">Esempi CSS</span> <!--sono stato qui ;)-->
                     <!--L'icona usata per la navigation bar é bicolore, ció vuole dire che si puossono scegliere due colori diversi:
                     Uno per la prima parte del icona "fa-primary" e una per la seconda "fa-secondary"
                     Tutto ció viene animato quando si passa il mouse sopra la navigation bar, routando l'icona di 180 gradi con una 
@@ -82,7 +84,7 @@
         </ul>
     </nav>
 
-    <main>   
+    <main>
         <h1>Cosmin Amelian</h1>
         <p>PAGINE CON ESEMPI CSS</p>
     </main>
