Co-authored-by: Alessandro Porpiglia <alex-211@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     </nav>
 
     <main>
-        <h1>Cosmin Amelian</h1>
+        <h1 class="titolo">Cosmin Amelianhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh</h1>
         <p>PAGINE CON ESEMPI CSS</p>
     </main>
 </body>
