Aggiunte nuove animazioni e bottone gihtub

--- a/index.html
+++ b/index.html
@@ -85,8 +85,10 @@
     </nav>
 
     <main>
-        <h1 class="titolo">Cosmin Amelianhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh</h1>
+        <h1 class="titolo">Cosmin Amelian</h1>
         <p>PAGINE CON ESEMPI CSS</p>
+
+        <a class="bottone">Github > </a>
     </main>
 </body>
 
