Ottimizzazioni e riaggiunta modalitá mobile (da completare)

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <!--Logo animato-->
             <li class="logo">
                 <a href="#" class="nav-icon">
-                    <span class="icon-text">Esempi CSS</span> <!--sono stato qui ;)-->
+                    <span class="icon-text">ESEMPI CSS</span> <!--sono stato qui ;)-->
                     <!--L'icona usata per la navigation bar é bicolore, ció vuole dire che si puossono scegliere due colori diversi:
                     Uno per la prima parte del icona "fa-primary" e una per la seconda "fa-secondary"
                     Tutto ció viene animato quando si passa il mouse sopra la navigation bar, routando l'icona di 180 gradi con una 
@@ -91,5 +91,4 @@
         <a class="bottone">Github > </a>
     </main>
 </body>
-
 </html>
