--- a/PAGES/page8.html
+++ b/PAGES/page8.html
@@ -133,7 +133,7 @@
 
     <main>
         <h1 class="titolo">Cosmin Amelian 3A - INFO</h1>
-        <h2 class="sottotit">PAGINE ESEMPIO CSS INTERNO: BORDERS</h2>
+        <h2 class="sottotit">PAGINE ESEMPIO CSS INTERNO: ROUNDED CORNERS</h2>
 
         <div class="esempi">
             <p class="rcorners rcornersback">Rounded corners! Con background color</p>
