--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="CSS/style.css">
     <script src="https://kit.fontawesome.com/e8055db231.js" crossorigin="anonymous"></script>
     <!--Icone Fontawesome: fontawesome.com-->
-    <link rel="icon" type="image/svg" href="IMAGES/favicon.svg">
+    <link rel="icon" type="image/svg" href="IMAGES/Tavola disegno 1.svg">
 
 </head>
 
