--- a/PAGES/page7.html
+++ b/PAGES/page7.html
@@ -85,7 +85,7 @@
 
     <main>
         <h1 class="titolo">Cosmin Amelian 3A - INFO</h1>
-        <h2 class="sottotit">PAGINE ESEMPIO CSS ESTERNO: BORDERS</h2>
+        <h2 class="sottotit">PAGINE ESEMPIO CSS ESTERNO: ROUNDED CORNERS</h2>
 
         <div class="esempi">
             <p class="rcorners rcornersback">Rounded corners! Con background color</p>
