--- a/PAGES/page9.html
+++ b/PAGES/page9.html
@@ -85,7 +85,7 @@
 
     <main>
         <h1 class="titolo">Cosmin Amelian 3A - INFO</h1>
-        <h2 class="sottotit">PAGINE ESEMPIO CSS ESTERNO: BORDERS</h2>
+        <h2 class="sottotit">PAGINE ESEMPIO CSS INLINE: ROUNDED CORNERS</h2>
 
         <div style="text-align: center; display: inline-grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); width: 100%; justify-items: center;">
             <p style="background: var(--icone2); width: 200px; height: 150px; padding: 20px; border-radius: 25px;">Rounded corners! Con background color</p>
