--- a/PAGES/page5.html
+++ b/PAGES/page5.html
@@ -58,7 +58,7 @@
 <body>
     <!--Navigation bar-->
     <!--Quando l'utente passa il mouse sulla barra, la seguente aumenta in larghezza da 5rem a 15rem
-    Allo steso tempo avengono altri eventi-->
+    Allo steso tempo avvengono altri eventi-->
     <nav class="navbar">
         <ul class="navbar-nav">
 
@@ -66,10 +66,10 @@
             <li class="logo">
                 <a href="../index.html" class="nav-icona">
                     <span class="testo-icona">ESEMPI CSS</span> <!--sono stato qui ;)-->
-                    <!--L'icona usata per la navigation bar é bicolore, ció vuole dire che si puossono scegliere due colori diversi:
-                    Uno per la prima parte del icona "fa-primary" e una per la seconda "fa-secondary"
-                    Tutto ció viene animato quando si passa il mouse sopra la navigation bar, routando l'icona di 180 gradi con una 
-                    transizione, e cambiando colore del icona(questo accade in tutte le icone)-->
+                    <!--L'icona usata per la navigation bar é bicolore, ció vuole dire che si possono scegliere due colori diversi:
+                    Uno per la prima parte dell'icona "fa-primary" e una per la seconda "fa-secondary"
+                    Tutto ció viene animato quando si passa il mouse sopra la navigation bar, ruotando l'icona di 180 gradi con una 
+                    transizione, e cambiando colore dell'icona(questo accade in tutte le icone)-->
                     <svg aria-hidden="true" focusable="false" data-prefix="fad" data-icon="angle-double-right"
                         role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"
                         class="svg-inline--fa fa-angle-double-right fa-w-14 fa-5x">
