--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <main>
         <h1 class="titolo">Cosmin Amelian 3A - INFO</h1>
         <h2 class="sottotitolo">PAGINE CON ESEMPI CSS</h2>
-        
+        <p>Tutto il development é su: </p>
         <a class="bottone" href="https://github.com/Cosmin702/SITO-V3">Github</a>
     </main>
 </body>
